--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "app",
+  "name": "food-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "npm run dev",
+    "start": "vite preview",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -30,6 +30,9 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "vite": "^6.0.1"
+    "vite": "^5.0.10"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
